Fix opacity on out of bounds alert

--- a/code/UI/OutOfBounds.scss
+++ b/code/UI/OutOfBounds.scss
@@ -4,14 +4,15 @@
     top: 0;
     bottom: 0;
     right: 0;
+    opacity: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    transition: opacity 1s ease-in;
 
     label {
-        color: rgba(255, 255, 255, 0);
-        font-family: No Virus;
+        font-family: Poppins;
         font-weight: bold;
         transition: color 0.6s ease-out;
         font-size: 42px;
@@ -26,10 +27,5 @@
 
     &.show {
         opacity: 1;
-
-        label {
-            transition: color 1s ease-in;
-            color: white;
-        }
     }
 }
